# Papers_QA

./: .env.example  .gitignore  .pre-commit-config.yaml  2_mistral_training.ipynb  3_inference.ipynb  CHANGELOG.md  CLEAN_REPO_VERIFICATION.md  CONTRIBUTING.md  Dockerfile  FINAL_STATUS.md  LICENSE  Makefile  README.md  REPOSITORY_STRUCTURE.md  SETUP_GUIDE.md  Security_figures.drawio  VERIFICATION_INDEX.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md  docker-compose.yml  medqa-training.ipynb  pyproject.toml  requirements.txt  train_data(2).csv
.github/workflows/: tests.yml
monitoring/: prometheus.yml
notebooks/: 01_production_pipeline.ipynb  02_qa_generation.ipynb  medqa_training.ipynb
src/papers_qa/: __init__.py  cli.py  config.py  logging_config.py
src/papers_qa/api/: __init__.py
src/papers_qa/data/: __init__.py
src/papers_qa/evaluation/: __init__.py
src/papers_qa/generation/: __init__.py
src/papers_qa/llm/: __init__.py
src/papers_qa/retrieval/: __init__.py
tests/: conftest.py  test_core.py  test_evaluation.py  test_integration.py  test_retrieval.py
